# WinMobileController

./: .gitignore  README.md
WinMobileControllerServer/: Cargo.toml
WinMobileControllerServer/src/: main.rs  win.rs
bat/: start_mosquitto.bat  stop_mosquitto.bat
server/: Cargo.toml  package-lock.json  package.json
server-tauri/app/: page.tsx
server-tauri/app/componets/mosquitto_control/: mosquitto_control.tsx
server-tauri/app/componets/server_control/: server_button.tsx  server_control.tsx
server-tauri/app/componets/setting/: setting_button.tsx
server-tauri/src-tauri/: Cargo.toml  tauri.conf.json
server-tauri/src-tauri/src/: main.rs  mqtt_pub_manager.rs  setting.rs  win_service.rs
server/app/: page.tsx
server/app/componets/mosquitto_control/: start_mosquitto_button.tsx  stop_mosquitto_button.tsx
server/app/componets/setting/: setting_button.tsx
server/app/setting/: page.tsx
server/src/: logic.rs  main.rs  mqtt_publish_no_ssl.rs  mqtt_publish_ssl.rs  mqtt_subscribe_no_ssl.rs  mqtt_subscribe_ssl.rs  mqtt_subscriber.rs  mqtt_utils.rs  samples.rs
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/icons/: icon.icns
server/src-tauri/src/: logic.rs  main.rs  mqtt_client.rs  setting.rs  win_input.rs  win_service.rs
server/src-tauri/src/mqtt_client/: mqtt_pub_manager.rs  mqtt_publisher.rs  mqtt_subscriber.rs
server/src-tauri/src/win_input/: win_input_control.rs
server/src-tauri/src/win_service/: win_service_control.rs
server/src/mqtt_utils/: mqtt_publisher.rs  mqtt_subscriber.rs
server_/src/: samples.rs  win.rs
server_/src/mqtt_utils/: mqtt_publisher.rs
view/: pubspec.yaml
view/android/app/src/main/: AndroidManifest.xml
view/lib/: main.dart  mqtt_publisher.dart  setting.dart  utils.dart  virtual_mouse.dart  virtual_mouse_logic.dart
view/test/: widget_test.dart
